// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts.ts: Extension: layoutFixedWidth layout 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "block-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": "Block extension demo",
      },
      "type": "extension",
    },
  ],
  "type": "doc",
}
`;

exports[`layouts.ts: Extension: layoutFullWidth layout 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "block-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "full-width",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": "Block extension demo",
      },
      "type": "extension",
    },
  ],
  "type": "doc",
}
`;

exports[`layouts.ts: Extension: layoutWide layout 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "block-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "wide",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": "Block extension demo",
      },
      "type": "extension",
    },
  ],
  "type": "doc",
}
`;
